--- a/playbook.yml
+++ b/playbook.yml
@@ -38,12 +38,21 @@
         state: present
         key: "{{ copy_local_key }}"
 
+# SSH server settings
     - name: Disable password authentication for root
       lineinfile:
         path: /etc/ssh/sshd_config
         state: present
         regexp: '^#?PermitRootLogin'
         line: 'PermitRootLogin prohibit-password'
+
+    # LogLevel VERBOSE logs user's key fingerprint on login. Needed to have a clear audit track of which key was used to log in
+    - name: Enable sshd verbose loglevel
+      lineinfile: dest=/etc/ssh/sshd_config regexp='^#?LogLevel' line='LogLevel VERBOSE'
+
+    - name: Password based logins are disabled - only public key based logins are allowed.
+      lineinfile: dest=/etc/ssh/sshd_config regexp='^#?AuthenticationMethods' line='AuthenticationMethods publickey'
+    - lineinfile: dest=/etc/ssh/sshd_config regexp='^#?PasswordAuthentication' line='PasswordAuthentication no'
 
 # Install Packages
     - name: Update apt
@@ -63,3 +72,29 @@
         state: enabled
         policy: deny
         direction: incoming
+
+# Docker Setup
+    - name: Add Docker GPG apt Key
+      apt_key:
+        url: https://download.docker.com/linux/debian/gpg
+        state: present
+
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/debian buster stable
+        state: present
+
+    - name: Update apt and install docker-ce
+      apt: update_cache=yes name=docker-ce state=latest
+
+    - name: Add user to "docker" group
+      user:
+        name: "{{ create_user}}"
+        groups: "docker"
+        append: true
+
+# Restart sshd
+    - name: restart sshd
+      service:
+        name: ssh
+        state: restarted
