add tmux config

--- a/playbook.yml
+++ b/playbook.yml
@@ -98,6 +98,12 @@
         groups: "docker"
         append: true
 
+# TMUX
+    - name: Copy over .tmux.conf
+      template:
+        src: "tmux.conf.j2"
+        dest: "/home/arthur/.tmux.conf"
+
 # Restart sshd
     - name: restart sshd
       service:
