--- a/playbook.yml
+++ b/playbook.yml
@@ -40,11 +40,7 @@
 
 # SSH server settings
     - name: Disable password authentication for root
-      lineinfile:
-        path: /etc/ssh/sshd_config
-        state: present
-        regexp: '^#?PermitRootLogin'
-        line: 'PermitRootLogin prohibit-password'
+      lineinfile: dest=/etc/ssh/sshd_config regexp='^PermitRootLogin' line='PermitRootLogin no'
 
     # LogLevel VERBOSE logs user's key fingerprint on login. Needed to have a clear audit track of which key was used to log in
     - name: Enable sshd verbose loglevel
@@ -94,7 +90,7 @@
 
     - name: Add user to "docker" group
       user:
-        name: "{{ create_user}}"
+        name: "{{ create_user }}"
         groups: "docker"
         append: true
 
@@ -102,10 +98,11 @@
     - name: Copy over .tmux.conf
       template:
         src: "tmux.conf.j2"
-        dest: "/home/arthur/.tmux.conf"
+        dest: "/home/{{ create_user }}/.tmux.conf"
+        mode: "644"
+        owner: "{{ create_user }}"
+        group: "{{ create_user }}"
 
 # Restart sshd
     - name: restart sshd
-      service:
-        name: ssh
-        state: restarted
+      service: name=ssh state=restarted
