--- a/playbook.yml
+++ b/playbook.yml
@@ -91,8 +91,15 @@
     - name: Add user to "docker" group
       user:
         name: "{{ create_user }}"
-        groups: "docker"
+        groups: docker
         append: true
+
+# docker-compose setup
+    - name: Install docker-compose
+      get_url:
+        url: "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-{{ ansible_system }}-{{ ansible_architecture }}"
+        dest: /usr/local/bin/docker-compose
+        mode: 0755
 
 # TMUX
     - name: Copy over .tmux.conf
